color contrast buttons fix

--- a/scoots/styles/base.css
+++ b/scoots/styles/base.css
@@ -83,7 +83,7 @@ button[type="submit"] {
     background-color: var(--background-color);
     border: none;
     border-radius: 4px;
-    color: #fff;
+    color: #333;
     font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s;
@@ -355,7 +355,7 @@ picture img {
     background-color: var(--background-color);
     border: none;
     border-radius: 4px;
-    color: #fff;
+    color: #333;
     font-size: 16px;
     font-weight: bold;
     cursor: pointer;
